syntax = "proto3";

service DataService {
  rpc FetchUsers (Empty) returns (UserList);
}

message Empty {}

message User {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string gender = 4;
  int32 age = 5;
  Hair hair = 6;
  Address address = 7;
  Company company = 8;
}

message Hair {
  string color = 1;
}

message Address {
  string postalCode = 1;
}

message Company {
  string department = 1;
}

message UserList {
  repeated User users = 1;
}
